--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Baptiste Florentin",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.9",
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
